[build-system]
requires = ["setuptools>=61.2", "setuptools_scm[toml]>=3.4.1"]
build-backend = "setuptools.build_meta"

[project]
name = "jaraco.crypto"
authors = [
	{ name = "Jason R. Coombs", email = "jaraco@jaraco.com" },
]
description = "Cryptography support by jaraco"
readme = "README.rst"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.8"
dependencies = []
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/jaraco/jaraco.crypto"

[project.optional-dependencies]
testing = [
	# upstream
	"pytest >= 6",
	"pytest-checkdocs >= 2.4",
	'pytest-black >= 0.3.7; python_implementation != "PyPy"', # workaround for jaraco/skeleton#22
	"pytest-cov",
	'pytest-mypy >= 0.9.1; python_implementation != "PyPy"', # workaround for jaraco/skeleton#22
	"pytest-enabler >= 2.2",
	"pytest-ruff",

	# local
]
docs = [
	# upstream
	"sphinx >= 3.5",
	"jaraco.packaging >= 9.3",
	"rst.linker >= 1.9",
	"furo",
	"sphinx-lint",

	# local
]

[tool.setuptools.packages.find]
exclude = [
	"build*",
	"dist*",
	"docs*",
	"tests*",
]
namespaces = true

[tool.black]
skip-string-normalization = true

[tool.setuptools_scm]
